styles not applying

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Roboto+Serif:opsz,wght@8..144,400;8..144,600&display=swap");
+
 * {
   margin: 0;
-  
 }
